image input, web search tool, and model checkpoint

--- a/practice/module-1/1.5_personal_chef.ipynb
+++ b/practice/module-1/1.5_personal_chef.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "beffe69e",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,14 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "cd1e2aa7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e3ff1cc062b412e8fa47454a27ecc16",
+       "model_id": "9e8505cf363d4a7091ef813e4795d55d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "639d8f99",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "({'name': 'IMG_0916.jpg', 'type': 'image/jpeg', 'size': 1489060, 'content': <memory at 0x104ca9480>, 'last_modified': datetime.datetime(2025, 12, 21, 20, 6, 15, 754000, tzinfo=datetime.timezone.utc)},)\n"
+      "({'name': 'IMG_0916.jpg', 'type': 'image/jpeg', 'size': 1489060, 'content': <memory at 0x11227f580>, 'last_modified': datetime.datetime(2025, 12, 21, 20, 6, 15, 754000, tzinfo=datetime.timezone.utc)},)\n"
      ]
     }
    ],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "1d5cdd8c",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "d85e8d4b",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "d2e9d544",
    "metadata": {},
    "outputs": [
@@ -143,25 +143,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nice! Based on what I can see in the image, you have:\n",
+      "Nice—I can help with recipe ideas that use what I can see in the image. Here’s what I can identify and some quick ideas to get you started:\n",
       "\n",
-      "- Eggs (two cartons)\n",
-      "- Milk (a jug)\n",
-      "- Almonds (in a plastic container)\n",
-      "- Chocolate candies (Hershey’s Pot of Gold and other chocolates)\n",
+      "What I can identify in the fridge image\n",
+      "- Eggs (two cartons on the top shelf)\n",
+      "- A container of almonds (or some kind of nuts) on the middle shelf\n",
+      "- A bottle/jug of milk or similar dairy on the bottom shelf\n",
+      "- A few boxed sweets/chocolates and maybe a few fruits or jars (not clear)\n",
       "\n",
-      "Here are recipe ideas that use those ingredients (plus a few common pantry items you might have). I’ve kept the ideas practical for what you likely have on hand.\n",
+      "Recipe ideas using those ingredients\n",
+      "- Breakfast/egg dishes\n",
+      "  - Classic French toast (eggs + milk + bread; you can add a pinch of cinnamon)\n",
+      "  - Scrambled eggs or an omelet with a splash of milk for creaminess\n",
+      "  - Simple egg skillet or frittata: eggs + milk, plus whatever veggies you have\n",
       "\n",
-      "1) Quick chocolate almond mug cake (very fast)\n",
-      "- What you need: eggs, milk, chocolate, almonds (optional for crunch)\n",
-      "- How: melt chocolate with a splash of milk, whisk in 1 egg and a tablespoon of milk, stir in a few crushed almonds if you like, microwave in a mug for 1–2 minutes until set.\n",
+      "- Baking with almonds and eggs\n",
+      "  - Almond cookies or almond flour cookies (use ground almonds/Nutty flour plus eggs)\n",
+      "  - Almond milk pancake or crepe batter (eggs + milk + almond flour or ground almonds)\n",
+      "  - Egg-based custard or pudding made with milk and a bit of almond extract if you have it\n",
       "\n",
-      "2) Chocolate almond smoothie or hot chocolate\n",
-      "- What you need: milk, almonds, chocolate\n",
-      "- How: blend 1 cup milk with a handful of almonds (soaked if you can), and melted chocolate or a scoop of cocoa/cresh chocolate. For a hot version, warm gently on the stove or in the microwave.\n",
+      "- Sweet snacks/ dessert ideas\n",
+      "  - Almond brittle or roasted almonds with a light sugar drizzle (eggs not required, but you can pair with a baked custard or milk-based dessert)\n",
+      "  - Simple almond milk smoothie or milk-based dessert using eggs for a custard base (if you’re comfortable with a baked custard)\n",
       "\n",
-      "3) Homemade almond milk (and a chocolate twist)\n",
-      "- What you need: almo\n",
+      "What I’d do next (to tailor precisely)\n",
+      "- If you want, I can search the web for specific, tested recipes that use eggs, almonds, and milk (and I’ll include brief notes on ingredients and steps so you can pick quickly).\n",
+      "- If you have other ingredients on hand (bread, cheese, vegetables, chocolate, fruit, etc.), tell me and I’ll tailor the recipe ideas to what’s actually available.\n",
+      "\n",
+      "Quick clarifying questions\n",
+      "- Are you okay with using eggs, milk, and almonds together in recipes (e.g., custards, cookies, pancakes), or do you want only savory dishes?\n",
+      "- Do you want vegetarian, dairy-free, or gluten-free options, or no dietary restrictions?\n",
+      "\n",
+      "If you’d like me to pull real recipes now, say “search for recipes with eggs, almonds, and milk,” and I’ll fetch you a curated set with links and short summaries.\n",
       "... [truncated]\n"
      ]
     }
@@ -193,7 +206,7 @@
     ")\n",
     "\n",
     "full_content = response['messages'][-1].content\n",
-    "print(full_content[:1000])  # prints only the first 1000 characters\n",
+    "print(full_content[:3000])  # prints only the first 1000 characters\n",
     "print(\"... [truncated]\")\n"
    ]
   },
