--- a/notebooks/module-3/3.3_hitl.ipynb
+++ b/notebooks/module-3/3.3_hitl.ipynb
@@ -78,7 +78,7 @@
     "\n",
     "response = agent.invoke(\n",
     "    {\n",
-    "        \"messages\": [HumanMessage(content=\"Please read my email and send a response.\")],\n",
+    "        \"messages\": [HumanMessage(content= \"Please read my email and send a response immediately. Send the reply now in the same email thread.\")],\n",
     "        \"email\": \"Hi Seán, I'm going to be late for our meeting tomorrow. Can we reschedule? Best, John.\"\n",
     "    },\n",
     "    config=config\n",
@@ -238,7 +238,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -252,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
