Its Not working in Colab: Fix
by default:
import os
print(os.getcwd())
>>/content

import os
print(os.path.exists("resources"))
>>False

os.makedirs("resources", exist_ok=True)

import os
print(os.path.exists("resources"))
>>True

Now the SQL DataBase code works

--- a/notebooks/module-2/2.4_wedding_planners.ipynb
+++ b/notebooks/module-2/2.4_wedding_planners.ipynb
@@ -69,6 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# For Colab Run: import os, os.makedirs("resources", exist_ok=True)
     "from langchain_community.utilities import SQLDatabase\n",
     "\n",
     "db = SQLDatabase.from_uri(\"sqlite:///resources/Chinook.db\")\n",
