--- a/notebooks/module-3/3.4_dynamic_prompts.ipynb
+++ b/notebooks/module-3/3.4_dynamic_prompts.ipynb
@@ -64,7 +64,7 @@
     "from langchain.messages import HumanMessage\n",
     "\n",
     "response = agent.invoke(\n",
-    "    {\"message\": [HumanMessage(content=\"Hello, how are you?\")]},\n",
+    "    {\"messages\": [HumanMessage(content=\"Hello, how are you?\")]},\n",
     "    context=LanguageContext(user_language=\"Irish\")\n",
     ")\n",
     "\n",
@@ -81,7 +81,7 @@
     "from langchain.messages import HumanMessage\n",
     "\n",
     "response = agent.invoke(\n",
-    "    {\"message\": [HumanMessage(content=\"Hello, how are you?\")]},\n",
+    "    {\"messages\": [HumanMessage(content=\"Hello, how are you?\")]},\n",
     "    context=LanguageContext(user_language=\"Spanish\")\n",
     ")\n",
     "\n",
@@ -98,7 +98,7 @@
     "from langchain.messages import HumanMessage\n",
     "\n",
     "response = agent.invoke(\n",
-    "    {\"message\": [HumanMessage(content=\"Hello, how are you?\")]},\n",
+    "    {\"messages\": [HumanMessage(content=\"Hello, how are you?\")]},\n",
     "    context=LanguageContext(user_language=\"French\")\n",
     ")\n",
     "\n",
@@ -116,7 +116,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -130,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
